toolchain/internal/core/analysis/testdata/errors/naming/const_not_camel.vdl
// format:off
// @expect: E102

const maxPageSize = 100
